--- a/templates/base.html
+++ b/templates/base.html
@@ -1,4 +1,5 @@
 {% load  staticfiles %}
+{% load  blog_tags %}
 <!doctype html>
 
 <html>
@@ -39,12 +40,21 @@
 <section class="container user-select">
     <header>
         <div class="hidden-xs header"><!--超小屏幕不显示-->
-            <h1 class="logo"><a href="index.html" title="个人技术博客"></a></h1>
-            <ul class="nav hidden-xs-nav">
-                <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span>网站首页</a></li>
-                <li><a href=""><span class="glyphicon glyphicon-erase"></span>网站前端</a></li>
-                <li><a href=""><span class="glyphicon glyphicon-inbox"></span>后端技术</a></li>
-                <li><a href=""><span class="glyphicon glyphicon-globe"></span>管理系统</a></li>
+            <h1 class="logo"><a href="{% url 'blog:index' %}" title="个人技术博客"></a></h1>
+            <ul class="nav hidden-xs-nav my_blog_menu">
+                <li class="active"><a href="{% url 'blog:index' %}"><span
+                        class="glyphicon glyphicon-home"></span>网站首页</a></li>
+                {% get_navigations as navi_list %}
+                {% for navi in navi_list %}
+                    <li>
+                        <a href=""><span class="glyphicon glyphicon-th-list"></span>{{ navi.name }}</a>
+                        <ul class="nav" style="width:80%;text-align: right" hidden="hidden">
+                            {% for cate in navi.category_set.all %}
+                                <li><a href="#">●{{ cate.name }}</a></li>
+                            {% endfor %}
+                        </ul>
+                    </li>
+                {% endfor %}
                 <li><a href="about.html"><span class="glyphicon glyphicon-user"></span>关于我们</a></li>
                 <li><a href="friendly.html"><span class="glyphicon glyphicon-tags"></span>友情链接</a></li>
             </ul>
@@ -66,8 +76,17 @@
             </div>
             <div id="header-xs-menu" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav header-xs-nav">
-                    <li class="active"><a href="index.html"><span class="glyphicon glyphicon-home"></span>网站首页</a></li>
-                    <li><a href=""><span class="glyphicon glyphicon-erase"></span>网站前端</a></li>
+                    <li class="active"><a href="{% url 'blog:index' %}"><span class="glyphicon
+                    glyphicon-home"></span>网站首页</a></li>
+                    <li>
+                        <a href=""><span class="glyphicon glyphicon-erase"></span>网站前端</a>
+                        <ul class="nav" style="width:80%;text-align: right" hidden="hidden">
+                            <li><a href="#">JavaScript</a></li>
+                            <li><a href="#">HTML</a></li>
+                            <li><a href="#">CSS</a></li>
+                        </ul>
+                    </li>
+
                     <li><a href=""><span class="glyphicon glyphicon-inbox"></span>后端技术</a></li>
                     <li><a href=""><span class="glyphicon glyphicon-globe"></span>管理系统</a></li>
                     <li><a href="about.html"><span class="glyphicon glyphicon-user"></span>关于我们</a></li>
@@ -124,27 +143,21 @@
         </div>
         <div class="sidebar-block recommend">
             <h2 class="title"><strong>热门推荐</strong></h2>
+            {% get_host_post as host_post_list %}
             <ul>
-                <li><a target="_blank" href=""> <span class="thumb"><img src="{% static 'images/icon/icon.png' %}"
-                                                                         alt=""></span> <span
-                        class="text">个人技术博客技术博客的SHORTCUT和ICON图标 ...</span> <span class="text-muted">阅读(2165)</span></a>
-                </li>
-                <li><a target="_blank" href=""> <span class="thumb"><img src="{% static 'images/icon/icon.png' %}"
-                                                                         alt=""></span> <span
-                        class="text">个人技术博客技术博客的SHORTCUT和ICON图标 ...</span> <span class="text-muted">阅读(2165)</span></a>
-                </li>
-                <li><a target="_blank" href=""> <span class="thumb"><img src="{% static 'images/icon/icon.png' %}"
-                                                                         alt=""></span> <span
-                        class="text">个人技术博客技术博客的SHORTCUT和ICON图标 ...</span> <span class="text-muted">阅读(2165)</span></a>
-                </li>
-                <li><a target="_blank" href=""> <span class="thumb"><img src="{% static 'images/icon/icon.png' %}"
-                                                                         alt=""></span> <span
-                        class="text">个人技术博客技术博客的SHORTCUT和ICON图标 ...</span> <span class="text-muted">阅读(2165)</span></a>
-                </li>
-                <li><a target="_blank" href=""> <span class="thumb"><img src="{% static 'images/icon/icon.png' %}"
-                                                                         alt=""></span> <span
-                        class="text">个人技术博客技术博客的SHORTCUT和ICON图标 ...</span> <span class="text-muted">阅读(2165)</span></a>
-                </li>
+                {% for post in host_post_list %}
+                    <li>
+                        <a target="_blank" href="{% url 'blog:detail' post.pk %}">
+                            <span class="thumb">
+                                <img src="/uploads/{{ post.img }}" alt="">
+                            </span>
+                            <span class="text">{{ post.title }}</span>
+                            <span class="text-muted">阅读 ({{ post.view }})</span>
+                        </a>
+                    </li>
+                {% endfor %}
+
+
             </ul>
         </div>
         <div class="sidebar-block comment">
@@ -298,6 +311,25 @@
             });
         return false;
     });
+</script>
+
+<script>
+    $(document).ready(function () {
+        $('.my_blog_menu > li').bind('mouseover', openSubMenu);
+        $('.my_blog_menu > li').bind('mouseout', closeSubMenu);
+
+
+        function openSubMenu() {
+            $(this).find('ul').show();
+        };
+
+        function closeSubMenu() {
+            $(this).find('ul').hide();
+        };
+
+
+    });
+
 </script>
 {% block script %}
 {% endblock script %}
