--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -79,25 +79,24 @@
     </div>
     <div class="content-block comment">
         <h2 class="title"><strong>评论</strong></h2>
-        <form action="comment.php" method="post" class="form-inline" id="comment-form">
+        <form action="{% url 'comments:post_comment' post.pk %}" method="post" class="form-inline" id="comment-form">
+            {% csrf_token %}
             <div class="comment-title">
                 <div class="form-group">
                     <label for="commentName">昵称：</label>
-                    <input type="text" name="commentName" class="form-control" id="commentName"
-                           placeholder="技术博客">
+                    {{ form.name }}
+                    {{ form.name.errors }}
                 </div>
                 <div class="form-group">
                     <label for="commentEmail">邮箱：</label>
-                    <input type="email" name="commentEmail" class="form-control" id="commentEmail"
-                           placeholder="admin@xxxx.com">
+                    {{ form.email }}
+                    {{ form.email.errors }}
                 </div>
             </div>
             <div class="comment-form">
-                <textarea placeholder="你的评论可以一针见血" name="commentContent"></textarea>
+                {{ form.text }}
+                {{ form.text.errors }}
                 <div class="comment-form-footer">
-                    <div class="comment-form-text">请先 <a href="javascript:;">登录</a> 或 <a
-                            href="javascript:;">注册</a>，也可匿名评论
-                    </div>
                     <div class="comment-form-btn">
                         <button type="submit" class="btn btn-default btn-comment">提交评论</button>
                     </div>
@@ -106,23 +105,26 @@
         </form>
         <div class="comment-content">
             <ul>
-                <li><span class="face"><img src="images/icon/icon.png" alt=""></span> <span
-                        class="text"><strong>技术博客站长</strong> (2015-10-18) 说：<br/>
-              欢迎来到个人技术博客，在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等 ...</span></li>
-                <li><span class="face"><img src="images/icon/icon.png" alt=""></span> <span
-                        class="text"><strong>技术博客编辑</strong> (2015-10-18) 说：<br/>
-              欢迎来到个人技术博客，在这里可以看到网站前端和后端的技术等 ...</span></li>
-                <li><span class="face"><img src="images/icon/icon.png" alt=""></span> <span
-                        class="text"><strong>令狐冲</strong> (2015-10-18) 说：<br/>
-              欢迎来到个人技术博客，在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等 ...</span>
-                </li>
-                <li><span class="face"><img src="images/icon/icon.png" alt=""></span> <span
-                        class="text"><strong>任盈盈</strong> (2015-10-18) 说：<br/>
-              欢迎来到个人技术博客，在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等 ...欢迎来到个人技术博客，在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等 ...欢迎来到个人技术博客，在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等在这里可以看到网站前端和后端的技术等 ...</span>
-                </li>
-                <li><span class="face"><img src="images/icon/icon.png" alt=""></span> <span
-                        class="text"><strong>技术博客站长</strong> (2015-10-18) 说：<br/>
-              欢迎来到个人技术博客，在这里可以看到网站前端和后端的技术等 ...</span></li>
+                {% for comment in comment_list %}
+                    <li>
+                        {#                        <span class="face">#}
+                        {#                            <img src="{% static 'images/icon/icon.png' %}" alt="">#}
+                        {#                        </span>#}
+                        <span class="text">
+                            <strong>{{ comment.name }}</strong> ({{ comment.created_time }}) 说：<br/>
+                            {{ comment.text }}
+                            {% if comment.author_reply %}
+                                <span class="text">
+                                <strong>作者回复</strong> 说：{{ comment.author_reply }}
+
+                            </span>
+                            {% endif %}
+
+                        </span>
+                    </li>
+                {% empty %}
+                    <li><span class="face"><strong>暂无评论！</strong></span></li>
+                {% endfor %}
             </ul>
         </div>
     </div>
