--- a/templates/base.html
+++ b/templates/base.html
@@ -59,12 +59,24 @@
                 <li><a href="about.html"><span class="glyphicon glyphicon-user"></span>关于我们</a></li>
                 <li><a href="friendly.html"><span class="glyphicon glyphicon-tags"></span>友情链接</a></li>
             </ul>
-            <div class="feeds"><a class="feed feed-xlweibo" href="" target="_blank"><i></i>新浪微博</a> <a
-                    class="feed feed-txweibo" href="" target="_blank"><i></i>腾讯微博</a> <a class="feed feed-rss" href=""
-                                                                                         target="_blank"><i></i>订阅本站</a>
-                <a class="feed feed-weixin" data-toggle="popover" data-trigger="hover" title="微信扫一扫" data-html="true"
-                   data-content="<img src='{% static "images/weixin.jpg" %}' alt=''>" href="javascript:;"
-                   target="_blank"><i></i>关注微信</a></div>
+            <div class="feeds">
+                <a class="feed feed-xlweibo" href="https://weibo.com/lengwenboke" target="_blank">
+                    <i></i>新浪微博
+                </a>
+                <a class="feed feed-txweibo" href="http://wpa.qq.com/msgrd?v=3&uin=1628048198&site=qq&menu=yes"
+                   target="_blank">
+                    <i></i>QQ客服
+                </a>
+                <a class="feed feed-rss" href="" target="_blank">
+                    <i></i>订阅本站
+                </a>
+                <a class="feed feed-weixin" data-toggle="popover" data-trigger="hover" title="微信打赏" data-html="true"
+                   data-content="<img src='{% static "images/weixin.png" %}' width='250px' height='250px' alt=''>"
+                   href="javascript:;"
+                   target="_blank">
+                    <i></i>微信打赏
+                </a>
+            </div>
             <div class="wall"><a href="readerWall.html" target="_blank">读者墙</a> | <a href="tags.html" target="_blank">标签云</a>
             </div>
         </div>
