--- a/templates/blog/detail.html
+++ b/templates/blog/detail.html
@@ -45,9 +45,23 @@
             </span>
         {% endfor %}
     </div>
-    <nav class="page-nav"> <span class="page-nav-prev">上一篇<br/>
-        <a href="" rel="prev">欢迎来到个人技术博客</a></span> <span class="page-nav-next">下一篇<br/>
-        <a href="" rel="next">欢迎来到个人技术博客</a></span></nav>
+    <nav class="page-nav">
+        <span class="page-nav-prev">上一篇<br/>
+            {% if prev_post %}
+                <a href="{% url 'blog:detail' prev_post.pk %}" rel="next">{{ prev_post.title }}</a>
+            {% else %}
+                <a href="#" rel="next">当前没有上一篇啦</a>
+            {% endif %}
+        </span>
+        <span class="page-nav-next">下一篇<br/>
+            {% if next_post %}
+                <a href="{% url 'blog:detail' next_post.pk %}" rel="next">{{ next_post.title }}</a>
+            {% else %}
+                <a href="#" rel="next">当前没有下一篇啦</a>
+            {% endif %}
+
+        </span>
+    </nav>
     <div class="content-block related-content visible-lg visible-md">
         <h2 class="title"><strong>相关推荐</strong></h2>
         <ul>
