--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,48 +1,60 @@
 ﻿{% extends 'base.html' %}
 {% load staticfiles %}
+{% load blog_tags %}
 {% block title %}
     首页
 {% endblock title %}
 
+
+
 {% block broadcast %}
     <div class="carousel-inner" role="listbox">
-        <div class="item active"><a href="content.html" target="_blank"><img
-                src="{% static 'images/img1.jpg' %}"
-                alt=""/></a>
-            <div class="carousel-caption"> 欢迎来到个人技术博客技术博客，在这里可以看到网站前端和后端的技术等</div>
-            <span class="carousel-bg"></span></div>
-        <div class="item"><a href="content.html" target="_blank"><img src="
-{% static 'images/img2.jpg' %}" alt=""/></a>
-            <div class="carousel-caption"> 欢迎来到个人技术博客技术博客，在这里可以看到网站前端和后端的技术等</div>
-            <span class="carousel-bg"></span></div>
-        <div class="item"><a href="content.html" target="_blank"><img src="
-{% static 'images/img3.jpg' %}" alt=""/></a>
-            <div class="carousel-caption"> 欢迎来到个人技术博客技术博客，在这里可以看到网站前端和后端的技术等</div>
-            <span class="carousel-bg"></span></div>
+        {% get_broadcast as bds %}
+        {% for bd in bds %}
+            {% if bd.is_activate %}
+                <div class="item active">
+                    <a href="{% url 'blog:detail' bd.post.pk %}" target="_blank">
+                        <img src="/uploads/{{ bd.image }}" alt=""/>
+                    </a>
+                    <div class="carousel-caption"> {{ bd.content }}</div>
+                    <span class="carousel-bg"></span>
+                </div>
+            {% else %}
+                <div class="item">
+                    <a href="{% url 'blog:detail' bd.post.pk %}" target="_blank">
+                        <img src="/uploads/{{ bd.image }}" alt=""/>
+                    </a>
+                    <div class="carousel-caption"> {{ bd.content }}</div>
+                    <span class="carousel-bg"></span>
+                </div>
+            {% endif %}
+        {% endfor %}
+
     </div>
 {% endblock broadcast %}
 
 {% block hostlist %}
     <div class="content-block hot-content hidden-xs">
-        <h2 class="title"><strong>本周热门排行</strong></h2>
-        <ul>
-            <li class="large"><a href="content.html" target="_blank"><img src="{% static 'images/img3.jpg' %}"
-                                                                          alt="">
-                <h3> 欢迎来到个人技术博客技术博客 </h3>
-            </a></li>
-            <li><a href="content.html" target="_blank"><img src="{% static 'images/logo.jpg' %}" alt="">
-                <h3> 欢迎来到个人技术博客技术博客,在这里可以看到网站前端和后端的技术等 </h3>
-            </a></li>
-            <li><a href="content.html" target="_blank"><img src="{% static 'images/img2.jpg' %}" alt="">
-                <h3> 欢迎来到个人技术博客技术博客,在这里可以看到网站前端和后端的技术等 </h3>
-            </a></li>
-            <li><a href="content.html" target="_blank"><img src="{% static 'images/img1.jpg' %}" alt="">
-                <h3> 欢迎来到个人技术博客技术博客，在这里可以看到网站前端和后端的技术等 </h3>
-            </a></li>
-            <li><a href="content.html" target="_blank"><img src="{% static 'images/logo.jpg' %}" alt="">
-                <h3> 欢迎来到个人技术博客技术博客，在这里可以看到网站前端和后端的技术等 </h3>
-            </a></li>
-        </ul>
+        {#        <ul>#}
+        {#            <li class="large">#}
+        {#                <a href="content.html" target="_blank">#}
+        {#                    <img src="{% static 'images/img3.jpg' %}" alt="">#}
+        {#                    <h3> {{ hw.1.title }}欢迎来到个人技术博客技术博客 </h3>#}
+        {#                </a>#}
+        {#            </li>#}
+        {#            <li><a href="content.html" target="_blank"><img src="{% static 'images/logo.jpg' %}" alt="">#}
+        {#                <h3> 欢迎来到个人技术博客技术博客,在这里可以看到网站前端和后端的技术等 </h3>#}
+        {#            </a></li>#}
+        {#            <li><a href="content.html" target="_blank"><img src="{% static 'images/img2.jpg' %}" alt="">#}
+        {#                <h3> 欢迎来到个人技术博客技术博客,在这里可以看到网站前端和后端的技术等 </h3>#}
+        {#            </a></li>#}
+        {#            <li><a href="content.html" target="_blank"><img src="{% static 'images/img1.jpg' %}" alt="">#}
+        {#                <h3> 欢迎来到个人技术博客技术博客，在这里可以看到网站前端和后端的技术等 </h3>#}
+        {#            </a></li>#}
+        {#            <li><a href="content.html" target="_blank"><img src="{% static 'images/logo.jpg' %}" alt="">#}
+        {#                <h3> 欢迎来到个人技术博客技术博客，在这里可以看到网站前端和后端的技术等 </h3>#}
+        {#            </a></li>#}
+        {#        </ul>#}
     </div>
 {% endblock hostlist %}
 
@@ -84,8 +96,34 @@
         <!--<div class="news-more" id="pagination">
             <a href="">查看更多</a>
         </div>-->
-        <div class="quotes" style="margin-top:15px"><span class="disabled">首页</span><span
-                class="disabled">上一页</span><span class="current">1</span><a href="">2</a><a href="">下一页</a><a
-                href="">尾页</a></div>
+        <div class="quotes" style="margin-top:15px">
+            <a href="?page=1">首页</a>
+            {% if first %}
+                <a href="?page=1">1</a>
+            {% else %}
+            {% endif %}
+            {% if left %}
+                {% if left_has_more %}
+                    <span>...</span>
+                {% endif %}
+                {% for i in left %}
+                    <a href="?page={{ i }}">{{ i }}</a>
+                {% endfor %}
+            {% endif %}
+            <a href="?page={{ page_obj.number }}" style="color: red">{{ page_obj.number }}</a>
+            {% if right %}
+                {% for i in right %}
+                    <a href="?page={{ i }}">{{ i }}</a>
+                {% endfor %}
+                {% if right_has_more %}
+                    <span>...</span>
+                {% endif %}
+            {% endif %}
+            {% if last %}
+                <a href="?page={{ paginator.num_pages }}">{{ paginator.num_pages }}</a>
+            {% endif %}
+            <a href="?page={{ paginator.num_pages }}">尾页</a>
+
+        </div>
     </div>
 {% endblock main %}
