--- a/templates/blog/list.html
+++ b/templates/blog/list.html
@@ -42,8 +42,34 @@
         <!--<div class="news-more" id="pagination">
             <a href="">查看更多</a>
         </div>-->
-        <div class="quotes" style="margin-top:15px"><span class="disabled">首页</span><span
-                class="disabled">上一页</span><span class="current">1</span><a href="">2</a><a href="">下一页</a><a
-                href="">尾页</a></div>
+        <div class="quotes" style="margin-top:15px">
+            <a href="?page=1">首页</a>
+            {% if first %}
+                <a href="?page=1">1</a>
+            {% else %}
+            {% endif %}
+            {% if left %}
+                {% if left_has_more %}
+                    <span>...</span>
+                {% endif %}
+                {% for i in left %}
+                    <a href="?page={{ i }}">{{ i }}</a>
+                {% endfor %}
+            {% endif %}
+            <a href="?page={{ page_obj.number }}" style="color: red">{{ page_obj.number }}</a>
+            {% if right %}
+                {% for i in right %}
+                    <a href="?page={{ i }}">{{ i }}</a>
+                {% endfor %}
+                {% if right_has_more %}
+                    <span>...</span>
+                {% endif %}
+            {% endif %}
+            {% if last %}
+                <a href="?page={{ paginator.num_pages }}">{{ paginator.num_pages }}</a>
+            {% endif %}
+            <a href="?page={{ paginator.num_pages }}">尾页</a>
+
+        </div>
     </div>
 {% endblock main %}
