--- a/templates/blog/friendly.html
+++ b/templates/blog/friendly.html
@@ -7,34 +7,13 @@
 {% block main %}
     <div class="content-block friendly-content row">
         <h2 class="title"><strong>本站友链</strong></h2>
-        <div class="col-md-4 col-xs-6"><span data-toggle="tooltip" data-placement="bottom" title="点击进入 百度 站点"><a
-                href="">百度</a></span>
-            <p>查看关于 本站 的文章查看关于 本站 的文章aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaas</p>
-        </div>
-        <div class="col-md-4 col-xs-6"><span data-toggle="tooltip" data-placement="bottom" title="点击进入 新浪 站点"><a
-                href="">新浪</a></span>
-            <p>查看关于 技术博客 的文章查看关于 技术博客 的文章查看关于 技术博客 的文章查看关于 技术博客 的文章查看关于 技术博客 的文章</p>
-        </div>
-        <div class="col-md-4 col-xs-6"><span data-toggle="tooltip" data-placement="bottom" title="点击进入 异步网络 站点"><a
-                href="">异步网络</a></span>
-            <p>查看关于 技术 的文章查看关于 技术 的文章查看关于 技术 的文章</p>
-        </div>
-        <div class="col-md-4 col-xs-6"><span data-toggle="tooltip" data-placement="bottom" title="点击进入 爱Q生活网  站点"><a
-                href="">爱Q生活网</a></span>
-            <p>查看关于 博客 的文章查看关于 博客 的文章查看关于 博客 的文章查看关于 博客 的文章</p>
-        </div>
-        <div class="col-md-4 col-xs-6"><span data-toggle="tooltip" data-placement="bottom" title="点击进入 技术  站点"><a
-                href="">技术</a></span>
-            <p>查看关于 技术 的文章查看关于 技术 的文章查看关于 技术 的文章</p>
-        </div>
-        <div class="col-md-4 col-xs-6"><span data-toggle="tooltip" data-placement="bottom" title="点击进入 博客  站点"><a
-                href="">博客</a></span>
-            <p>查看关于 博客 的文章查看关于 博客 的文章查看关于 博客 的文章查看关于 博客 的文章</p>
-        </div>
-        <div class="col-md-4 col-xs-6"><span data-toggle="tooltip" data-placement="bottom" title="点击进入 本站  站点"><a
-                href="">本站</a></span>
-            <p>查看关于 本站 的文章查看关于 本站 的文章aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaas</p>
-        </div>
+        {% for friendly in friendly_list %}
+            <div class="col-md-4 col-xs-6"><span data-toggle="tooltip" data-placement="bottom"
+                                                 title="点击进入 {{ friendly.title }} 站点"><a
+                    href="{{ friendly.weburl }}">{{ friendly.title }}</a></span>
+                <p>查看关于 {{ friendly.title }} 的文章查看关于 本站 的文章{{ friendly.desc }}</p>
+            </div>
+        {% endfor %}
     </div>
     <div class="content-block comment">
         <h2 class="title"><strong>提交友链</strong></h2>
@@ -42,27 +21,31 @@
             <div class="comment-title">
                 <div class="form-group">
                     <label for="messageName">网站名称：</label>
-                    <input type="text" name="messageName" class="form-control" id="messageName" placeholder="个人技术博客">
+                    {{ form.title }}
+                    {{ form.title.error }}
                 </div>
 
                 <div class="form-group">
                     <label for="messageEmail">网站地址：</label>
-                    <input type="email" name="messageEmail" class="form-control" id="messageEmail"
-                           placeholder="http://www.baidu.com">
+                    {{ form.weburl }}
+                    {{ form.weburl.error }}
                 </div>
                 <div class="form-group">
                     <label for="messageEmail">联系邮箱：</label>
-                    <input type="email" name="messageEmail" class="form-control" id="messageEmail"
-                           placeholder="admin@xxxx.com">
+                    {{ form.email }}
+                    {{ form.email.error }}
+
                 </div>
             </div>
             <div class="comment-form">
 
-                <textarea placeholder="请填写网站服务内容" name="messageContent"></textarea>
+                {{ form.desc }}
+                {{ form.desc.error }}
             </div>
             <div class="comment-form">
                 <br>
-                <textarea placeholder="请填写申请理由" name="messageContent"></textarea>
+                {{ form.reason }}
+                {{ form.reason.error }}
                 <div class="comment-form-footer">
 
                     <div class="comment-form-btn">
