--- a/templates/blog/friendly.html
+++ b/templates/blog/friendly.html
@@ -38,12 +38,12 @@
                 </div>
             </div>
             <div class="comment-form">
-
+                <label for="messageEmail">网站描述：</label>
                 {{ form.desc }}
                 {{ form.desc.error }}
             </div>
             <div class="comment-form">
-                <br>
+                <label for="messageEmail">申请理由：</label>
                 {{ form.reason }}
                 {{ form.reason.error }}
                 <div class="comment-form-footer">
